--- a/ev-charge-hub/server/package.json
+++ b/ev-charge-hub/server/package.json
@@ -19,7 +19,8 @@
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
