--- a/ev-charge-hub/server/package.json
+++ b/ev-charge-hub/server/package.json
@@ -2,6 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
+
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -23,6 +25,8 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
   }
 }
