--- a/ev-charge-hub/server/package.json
+++ b/ev-charge-hub/server/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "server",
+  "name": "ev-charge-hub-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "EV Charge Hub Backend API",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build required for Node.js'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "keywords": ["ev", "charging", "api", "nodejs"],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
