--- a/ev-charge-hub/package.json
+++ b/ev-charge-hub/package.json
@@ -2,7 +2,7 @@
   "name": "your-app-name",
   "version": "1.0.0",
   "scripts": {
-    "start": "node server/index.js"
+    "start": "node server/server.js"
   },
   "dependencies": {}
 }
