--- a/ev-charge-hub/package.json
+++ b/ev-charge-hub/package.json
@@ -1,8 +1,17 @@
 {
-  "name": "your-app-name",
+  "name": "ev-charge-hub",
   "version": "1.0.0",
+  "description": "Your app description",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/index.js",
+    "build": "npm install",
+    "dev": "node server/index.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.0"
+  },
+  "engines": {
+    "node": "18.x"
+  }
 }
