--- a/ev-charge-hub/package.json
+++ b/ev-charge-hub/package.json
@@ -1,17 +1,33 @@
 {
-  "name": "ev-charge-hub",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Your app description",
-  "main": "server/index.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node server/index.js",
-    "build": "npm install",
-    "dev": "node server/index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.18.0"
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.2.1",
+    "googleapis": "^148.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.1",
+    "ws": "^8.18.1"
   },
-  "engines": {
-    "node": "18.x"
+  "devDependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^3.1.9",
+    "ws": "^8.13.0"
   }
 }
