--- a/ev-charge-hub/client/package.json
+++ b/ev-charge-hub/client/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run build",    "test": "react-scripts test",
+    "build": "npx react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
