--- a/ev-charge-hub/server/.env
+++ b/ev-charge-hub/server/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://shrisha:Sbyr123@cluster0.lsnugmy.mongodb.net/ev_charge_hub?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=12345
 PORT=5000
+NODE_ENV=production
+CLIENT_URL=https://ev-charge-hubs1.onrender.com
